--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generateMochawesome": "marge ./results.json"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,16 @@
   "devDependencies": {
     "@types/webdriverio": "^5.0.0",
     "@wdio/cli": "^7.9.0",
+    "@wdio/dot-reporter": "^7.9.0",
     "@wdio/local-runner": "^7.9.0",
     "@wdio/mocha-framework": "^7.9.0",
     "@wdio/spec-reporter": "^7.9.0",
     "chromedriver": "^92.0.1",
     "mochawesome": "^6.2.2",
+    "mochawesome-report-generator": "^5.2.0",
     "wdio-chromedriver-service": "^7.2.0"
+  },
+  "dependencies": {
+    "wdio-mochawesome-reporter": "^2.0.1"
   }
 }
